[package]
name = "images_from_images2_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2", features=["derive"]}
image = {version = "0.24", features=["avif-decoder"]}
futures = "0.3"
images_from_images2_lib = {path="../images_from_images2_lib"}
env_logger = "0.9"